--- a/blog-frontend/src/app/welcome-page/welcome-page.component.html
+++ b/blog-frontend/src/app/welcome-page/welcome-page.component.html
@@ -1,6 +1,12 @@
 <div class="front-page-enclosure">
   <app-header></app-header>
 
+  <div class="row">
+    <div class="col-md-12">
+      <h1>DevTools QuickNote</h1>
+    </div>
+  </div>
+
   <div class="main-content-box">
 
     <div class="row">
