--- a/blog-frontend/src/app/page-sections/app-header/app-header.component.html
+++ b/blog-frontend/src/app/page-sections/app-header/app-header.component.html
@@ -1,5 +1,15 @@
-<div class="row">
-  <div class="col-md-12">
-    <h1>DevTools QuickNote</h1>
-  </div>
+<div class="top-header-bar">
+    <div style="display:inline-block; width:50%; padding-right:0;">
+      <ul class="header-navigation-bar">
+        <li><a routerLink="/">HOME</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <div style="display:inline-block; float:right; text-align:right; width:50%; padding-left:0; padding-right:0;">
+      <ul class="header-navigation-bar">
+        <li><a href="#">Sign In</a></li>
+        <li><a href="#">Sign Up</a></li>
+      </ul>
+    </div>
 </div>
