--- a/blog-frontend/src/app/sub-topic/sub-topic-form/sub-topic-form.component.html
+++ b/blog-frontend/src/app/sub-topic/sub-topic-form/sub-topic-form.component.html
@@ -42,8 +42,15 @@
     </div>
     <div class="col-md-10">
       <button type="submit"
-              class="btn btn-primary general-button">
+              class="btn btn-primary general-button"
+              *ngIf="!modifyStatus">
               Submit
+      </button>
+
+      <button type="submit"
+              class="btn btn-primary general-button"
+              *ngIf="modifyStatus">
+              Change
       </button>
 
       <button type="button"
