Making the app responsive

--- a/blog-frontend/src/app/sub-topic/sub-topic.component.html
+++ b/blog-frontend/src/app/sub-topic/sub-topic.component.html
@@ -6,9 +6,107 @@
     <app-page-tracker [topicIndex]="topicIndex"
                       [subTopicIndex]="-1">
     </app-page-tracker>
+    <!-- <div class="row"> -->
+
+    <div class="row">
+      <h3>Contents of topic "{{ topicTitle }}" </h3>
+      <br>
+    </div>
+
+        <div class="topic-list"
+              *ngIf="subTopicsList.length>0">
+          <ol class="topic-listing">
+            <li *ngFor="let subTItem of subTopicsList; let subTIndex=index">
+                <strong><span class="topic-title"
+                      (click)="displaySubTopic(subTIndex)">
+                      {{ subTItem.title }}
+                </span></strong>
+
+              <div class="row">
+                <p *ngIf="subTIndex===subTopicOnDisplay">
+                  {{ subTItem.desc }}
+                </p>
+              </div>
+
+              <div class="row space-above"
+                    *ngIf="subTIndex===subTopicOnDisplay">
+
+                <div class="col-xs-4 subtopic-buttons">
+                  <button type="button"
+                          class="btn btn-primary general-button"
+                          (click)="openSubTopic(subTIndex)">
+                          Open
+                  </button>
+                </div>
+
+                <div class="col-xs-4  subtopic-buttons">
+                  <button type="button"
+                          class="btn btn-info general-button"
+                          (click)="modifySubTopic(subTIndex)">
+                          Modify
+                  </button>
+                </div>
+
+                <div class="col-xs-4 subtopic-buttons">
+                  <button type="button"
+                          class="btn btn-danger general-button"
+                          (click)="deleteSubTopic(subTIndex)">
+                          Delete
+                  </button>
+                </div>
+              </div>
+
+              <div class="row">
+                <p *ngIf="deleteError&&deleteIndex===subTIndex"
+                    style="color:red">{{ deleteMessage }}
+                </p>
+              </div>
+            </li>
+          </ol>
+        </div>
+
+        <div class="row">
+          <h4 *ngIf="subTopicsList.length===0">
+            No subtopics to display.
+          </h4>
+          <br>
+        </div>
+
+        <div class="row">
+          <button type="button"
+                  class="btn btn-primary general-button"
+                  (click)="addNewSubTopic()"
+                  *ngIf="!addNewForm">
+                  Add new
+          </button>
+          <br>
+        </div>
+
+        <app-sub-topic-form [topicIndex]="topicIndex"
+                    (formSubmitted)="addNewForm=false; modifyStatus=false"
+                    [modifyStatus]="modifyStatus"
+                    [modifyIndex]="modifyIndex"
+                    *ngIf="addNewForm">
+        </app-sub-topic-form>
+
+    </div>
+</div>
+
+<app-footer></app-footer>
+
+
+
+
+<!-- <div class="front-page-enclosure">
+  <app-header></app-header>
+
+  <div class="main-content-box"
+        *ngIf="displayPage">
+    <app-page-tracker [topicIndex]="topicIndex"
+                      [subTopicIndex]="-1">
+    </app-page-tracker>
     <div class="row">
 
-      <div class="col-md-12">
         <h3>Contents of topic "{{ topicTitle }}" </h3>
         <br>
         <div class="topic-list"
@@ -73,10 +171,8 @@
                     *ngIf="addNewForm">
         </app-sub-topic-form>
 
-      </div>
-
     </div>
   </div>
 </div>
 
-<app-footer></app-footer>
+<app-footer></app-footer> -->
