--- a/blog-frontend/src/app/topic-page/topic-page.component.html
+++ b/blog-frontend/src/app/topic-page/topic-page.component.html
@@ -3,7 +3,7 @@
 
   <div class="main-content-box">
     <div class="row">
-      <div class="col-xs-12">
+      <!-- <div class="col-xs-12 "> -->
         <h2 class="url-link"
             (click)="viewTopics()">
             View archived topics
@@ -64,7 +64,7 @@
                         [modifyStatus]="modifyStatus"
                         [modifyIndex]="modifyIndex">
         </app-topic-form>
-      </div>
+      <!-- </div> -->
 
     </div>
   </div>
