--- a/blog-frontend/src/app/welcome-page/welcome-page.component.html
+++ b/blog-frontend/src/app/welcome-page/welcome-page.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
 
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-xs-12">
       <h1>DevTools QuickNote</h1>
     </div>
   </div>
