--- a/blog-frontend/src/app/page-sections/app-header/app-header.component.html
+++ b/blog-frontend/src/app/page-sections/app-header/app-header.component.html
@@ -1,15 +1,33 @@
 <div class="top-header-bar">
-    <div style="display:inline-block; width:50%; padding-right:0;">
+  <div *ngIf="!smallWindow">
+    <div class="top-header-left">
       <ul class="header-navigation-bar">
         <li><a routerLink="/">HOME</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a routerLink="/about">About</a></li>
+        <li><a routerLink="/contact">Contact</a></li>
       </ul>
     </div>
-    <div style="display:inline-block; float:right; text-align:right; width:50%; padding-left:0; padding-right:0;">
+    <div class="top-header-right">
       <ul class="header-navigation-bar">
-        <li><a href="#">Sign In</a></li>
-        <li><a href="#">Sign Up</a></li>
+        <li><a routerLink="/login">Sign In</a></li>
+        <li><a routerLink="/login">Sign Up</a></li>
       </ul>
     </div>
+  </div>
+
+  <div *ngIf="smallWindow">
+      <div class="top-header-small">
+          <div class="dropdown-mobile">
+              <span class="glyphicon glyphicon-menu-hamburger"></span>
+              <div class="dropdown-mobile-content">
+                  <a routerLink="/">Home</a>
+                  <a routerLink="/about">About</a>
+                  <a routerLink="/contact">Contact</a>
+                  <a routerLink="/login">Sign in</a>
+                  <a routerLink="/login">Sign up</a>
+              </div>
+          </div>
+      </div>
+  </div>
+
 </div>
