--- a/blog-frontend/src/app/topic-page/topic-form/topic-form.component.html
+++ b/blog-frontend/src/app/topic-page/topic-form/topic-form.component.html
@@ -4,13 +4,13 @@
 
   <div class="form-group">
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-sm-2">
         <label for="title"
                 class="control-label">
                 Title
         </label>
       </div>
-      <div class="col-md-10">
+      <div class="col-sm-10">
         <input type="text" id="title" name="title"
                 formControlName="title"
                 class="form-control"
@@ -23,10 +23,10 @@
 
   <div class="form-group">
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-sm-2">
         <label for="desc" class="control-label">Description</label>
       </div>
-      <div class="col-md-10">
+      <div class="col-sm-10">
         <textarea id="desc" name="desc"
                   formControlName="desc"
                   class="form-control"
@@ -35,7 +35,7 @@
     </div>
   </div>
   <p *ngIf="topicForm.get('desc').touched&&topicForm.get('desc').invalid">
-  Title is needed.</p>
+  Description is needed.</p>
 
   <button type="submit"
           name="submit"
