--- a/blog-frontend/src/queries.css
+++ b/blog-frontend/src/queries.css
@@ -4,12 +4,22 @@
       padding-right: 5%;
     }
 
+    .note-preview-block {
+      width: 90%;
+      margin-left: 50px;
+    }
+
 }
 
 @media only screen and (max-width: 767px) {
     .row {
       margin-right: 0px;
       margin-left: 0px;
+    }
+
+    .row-buttons {
+      padding-left: 5px;
+      padding-right: 5px;
     }
 
     .main-content-box {
@@ -35,6 +45,24 @@
     .login-block {
       width: 70%;
       margin: auto;
+    }
+
+    .list-container {
+      padding-left: 0px;
+    }
+
+    .control-label {
+      text-align: left;
+    }
+
+    .note-preview-block {
+      width: 100%;
+      margin-left: 0;
+    }
+
+    .header-navigation-bar li {
+      padding-right: 10px;
+      padding-left: 10px;
     }
 }
 
@@ -62,6 +90,11 @@
   li button {
     margin-left: 5px;
   }
+
+  .page-tracker-panel {
+    padding-left: 0px;
+  }
+
 }
 
 
@@ -72,12 +105,6 @@
 
   .general-button {
     max-width: 80px;
-  }
-
-  .subtopic-buttons {
-    margin-left: -15px !important;
-    padding-right: 0;
-    padding-left: 0;
   }
 
   .note-display-box {
