--- a/blog-frontend/src/styles.css
+++ b/blog-frontend/src/styles.css
@@ -1,6 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-
-/* You can add global styles to this file, and also import other style files */
 * {
   width: 100%;
   box-sizing: border-box;
@@ -10,9 +8,9 @@ h1 {
   text-align: center;
 }
 
-/*p {
-  font-size: 100%;
-}*/
+.large-size {
+  font-size: 120%;
+}
 
 .front-page-enclosure {
   background-color: rgb(155, 155, 155);
@@ -58,6 +56,7 @@ h1 {
 .welcome-text-block {
   padding-left: 7%;
   padding-right: 7%;
+  font-size: 115%;
 }
 
 .login-block {
@@ -133,6 +132,10 @@ h1 {
   margin-left: 20px;
 }
 
+.list-container {
+  padding-left: 20px;
+}
+
 .note-display-box {
   padding-left: 30px;
   padding-top: 15px;
@@ -151,11 +154,30 @@ h1 {
 .top-header-bar {
   width: 100%;
   padding-bottom: 0;
+  background-color: rgb(216, 216, 216);
+}
+
+.top-header-small {
+  width: 45px;
+}
+
+.top-header-left {
+  display: inline-block;
+  width: 50%;
+  padding-right: 0;
+}
+
+.top-header-right {
+  display: inline-block;
+  float: right;
+  text-align: right;
+  width: 50%;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .header-navigation-bar {
   list-style-type: none;
-  background-color: rgb(216, 216, 216);
   padding: 10px;
   overflow: hidden;
   margin-bottom: 0;
@@ -163,31 +185,59 @@ h1 {
 
 .header-navigation-bar li {
   display: inline;
-  /*float: left;*/
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-right: 20px;
+  padding-left: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
-}
-
-.nav-right-links {
-  /*display: inline;*/
-  /*float: right;*/
 }
 
 .header-navigation-bar li:hover {
   background-color: white;
 }
 
-.header-navigation-bar a {
-  color: rgb(55, 55, 55);
+.header-navigation-bar li a {
   text-decoration: none;
+  color: inherit;
 }
 
-.nav-right-links {
-  float: right;
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown-mobile {
+    position: relative;
+    display: inline-block;
+    padding: 10px;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-mobile-content {
+    display: none;
+    position: absolute;
+    background-color: inherit;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown-mobile:hover .dropdown-mobile-content {
+    display: block;
+}
+
+/* Links inside the dropdown */
+.dropdown-mobile-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-mobile-content a:hover {
+  background-color: rgb(155, 155, 155);;
+}
+
+.dropdown-mobile:hover {
+    background-color: white;
 }
 
 .page-tracker-panel {
