Made fixes for --prod deployment.
The code needed changes and the compile is stricter when --prod flag is
used. There were incompatibilities in function calls, functions taking
mandatory arguments but not being called with any.

--- a/blog-frontend/src/app/login-register/login-register.component.html
+++ b/blog-frontend/src/app/login-register/login-register.component.html
@@ -81,7 +81,7 @@
 
     <br>
 
-    <form [formGroup]="registrationForm" (ngSubmit)="resisterUser()">
+    <form [formGroup]="registrationForm" (ngSubmit)="registerUser()">
       <div class="form-group">
         <div class="row">
           <div class="col-sm-2">
